[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff]
line-length = 88

[tool.poetry]
name = "chat-admin-bot"
version = "0.1.0"
description = ""
authors = ["tlartem <tlartem@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
